2015-07-03  Richard Frith-Macdonald <rfm@gnu.org>

	* EcProcess.h:
	* EcProcess.m:
	Revamp memory handling code to work with total process memory rather
	than heap size.  Report usage in same units as the 'ps' command.

2015-06-17  Richard Frith-Macdonald <rfm@gnu.org>

	* EcAlarmSinkSNMP.m: Fix stupid mistake setting notificationID.

2015-06-16  Richard Frith-Macdonald <rfm@gnu.org>

	* EcAlarmSinkSNMP.m: Fix error in alarms table oid length.
	* EcCommand.m: Fix error in compression of debug logs.

2015-05-31  Richard Frith-Macdonald <rfm@gnu.org>

	* EcLogger.m: When logging to stderr, use lock to synchronise with
	logs produced by gnustep-base NSLog().

2015-05-29  Richard Frith-Macdonald <rfm@gnu.org>

	* EcAlarmSinkSNMP.m: log SNMP errors via the main logging mechanism
	or NSLog.
	* EcControl.m: fix failure to perform includes in some cases.
	* EcAlerter.m: tidyups

2015-03-26  Richard Frith-Macdonald <rfm@gnu.org>

	* Control.plist:
	* EcCommand.m:
	* EcProcess.h:
	* EcProcess.m:
	New options for dealing with I/O.  In EcProcess we can set
	EcKeepStandardError to keep the stderr stream separate from the
	debug logging file.
	When a process is launched from the Command server, we can define
	KeepStandardInput, KeepStandardOutput, and KeepStandardError flags
	in the task info to stop the standard streams from being closed.

2015-03-19  Richard Frith-Macdonald <rfm@gnu.org>

	* EcProcess.m:
	* EcAlerter.m:
	Use milliseconds in logging timestamps.

2015-02-02  Richard Frith-Macdonald <rfm@gnu.org>

	* EcAlerter.h: Add options for time-limiting rule activity
	* EcAlerter.m: Implement those options
	* EcProcess.m: Put debug logs in 'DebugLogs' by default.
	* EcCommand.m: Put our logs in 'Logs' by default.
	* EcControl.m: Put our logs in 'Logs' by default.
	Change default logging locations.
	*GNUmakefile: bump version for release

2015-02-02  Richard Frith-Macdonald <rfm@gnu.org>

        * EcAlarmDestination.m: When coalescing alarms, do not coalesce a